# pracpython

./: .gitignore  README.md
20210916/1/: urls
20210916/2/: urls
20210916/3/: gentest.py  prog.py  urls
20210923/1/: prog.py  urls
20210923/2/: prog.py  urls
20210923/3/: prog.py  urls
20210930/1/: prog.py  urls
20210930/2/: prog.py  urls
20210930/3/: prog.py  urls
20211007/1/: prog.py  urls
20211007/2/: prog.py  urls
20211007/3/: prog.py  urls
20211007/4/: prog.py  urls
20211014/1/: prog.py  urls
20211014/2/: prog.py
20211014/3/: prog.py  urls
20211021/1/: prog.py  urls
20211021/2/: prog.py  urls
20211021/3/: prog.py  urls
20211028/1/: prog.py
20211028/2/: prog.py  urls
20211028/3/: prog.py  urls
20211111/1/: prog.py  urls
20211111/2/: prog.py  urls
20211118/1/: prog.py  urls
20211118/2/: prog.py  urls
20211118/3/: prog.py  urls
20211125/1/: prog.py  urls
20211125/2/: prog.py  urls
20211125/3/: prog.py  urls
20211202/1/: prog.py  urls
20211202/2/: prog.py  urls
20211213/1/: prog.py  urls
20211213/2/: prog.py  urls
20220214/: prog.py
20220214/1/: prog.py
20220221/1/: anna_.txt  fipsedixit.py
20220221/2/:  jabber.txt  jabber.txt
20220228/1/: prog.py
20220305/1/: prog.py
20220516/1/: .doit.db  MANIFEST.in  dodo.py  pyproject.toml  requirements.txt  setup.cfg
20220516/1/po/: solver.pot
20220516/1/po/en/LC_MESSAGES/: solver.mo  solver.po
20220516/1/po/ru/LC_MESSAGES/: solver.mo  solver.po
20220516/1/solver/: __init__.py  __main__.py
20220516/1/solver.egg-info/: PKG-INFO  SOURCES.txt
(+163 files in other folders)
