[metadata]
name = solver
version = 0.0.1
author = Zadorozhnaya Julia
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = solver
include_package_data = True
install_requires =
   pyfiglet

[options.package_data]
Solver = */*/solver.mo
